[gd_scene load_steps=12 format=2]

[ext_resource path="res://Components/Modular IA/Move/Move.tscn" type="PackedScene" id=1]
[ext_resource path="res://Components/Enemies/Follower/Follower.gd" type="Script" id=2]
[ext_resource path="res://Components/Modular IA/OnFloorCheck/OnFloorCheck.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/Modular IA/Detector/Detector.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/Modular IA/Rotate/Rotate.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/Modular IA/LimitSpeed/LimitSpeed.tscn" type="PackedScene" id=6]
[ext_resource path="res://Components/Modular IA/Life/Life.tscn" type="PackedScene" id=7]
[ext_resource path="res://3d Models/slime.glb" type="PackedScene" id=8]
[ext_resource path="res://Scenes/slime_particles.tscn" type="PackedScene" id=9]

[sub_resource type="SphereShape" id=1]

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Life/Render")

[node name="Follower" type="RigidBody" groups=["Enemy"]]
collision_layer = 4
collision_mask = 7
mode = 2
contacts_reported = 3
contact_monitor = true
script = ExtResource( 2 )

[node name="Mesh" type="CollisionShape" parent="." groups=["Enemy"]]
shape = SubResource( 1 )

[node name="slime" parent="Mesh" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, -1, 0, -0.75, 0 )

[node name="Move" parent="." instance=ExtResource( 1 )]

[node name="OnFloorCheck" parent="." instance=ExtResource( 3 )]

[node name="Detector" parent="." instance=ExtResource( 4 )]
transform = Transform( 200, 0, 0, 0, 200, 0, 0, 0, 200, 0, 0, 0 )
collision_layer = 4

[node name="Rotate" parent="." instance=ExtResource( 5 )]

[node name="LimitSpeed" parent="." instance=ExtResource( 6 )]

[node name="Life" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.98119, 0 )
texture = SubResource( 2 )

[node name="ProgressBar" parent="Life/Render" index="0"]
max_value = 5.0
value = 5.0

[node name="Q" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CPUParticles" parent="." instance=ExtResource( 9 )]

[connection signal="timeout" from="Q" to="." method="_on_Q_timeout"]

[editable path="Mesh/slime"]
[editable path="Life"]
